--- a/style.css
+++ b/style.css
@@ -15,3 +15,72 @@ Mobil   0 - 539px
 Tablet  540px - 959px (čti jako 540px a víc)
 PC      960px a víc
 */
+
+h1{
+	text-align: center;
+}
+h2{
+	font-size: 18px;
+}
+
+img{
+	border-radius: 50%;
+	margin: auto;
+	display: block;
+	
+}
+.card{
+	box-sizing: border-box;
+}
+.contejner{
+	border: 2px solid rgb(163, 161, 161);
+	border-radius: 15px;
+	padding:0 15px;
+
+	box-sizing: border-box;
+}
+
+.text{
+	text-align: center;
+	margin: 0 0 0 16px;
+
+}
+
+@media screen and (min-width: 540px) {
+	.card{
+		display: flex;
+		flex-wrap: wrap;
+		gap: 20px;	
+	}
+	
+	.contejner{
+		flex: 0 1 calc((100% - 20px) / 2);
+		margin: 0 0 15px 0;
+	}
+	
+	img{
+		width: 90px;
+	}
+	.text{
+		text-align: left;
+	}
+	
+}
+
+@media screen and (min-width: 960px) {
+	.card{
+		flex-wrap: nowrap;
+		
+	}
+	.contejner{
+		flex-direction: column;
+		flex: 1 1 calc(100%/4);
+	}
+	img{
+		width: auto;
+	}
+	.text{
+		text-align: center;
+	}
+
+}
