--- a/style.css
+++ b/style.css
@@ -24,16 +24,11 @@ h2{
 }
 
 img{
-	display: inline-block;
-	border-radius: 50%;
-	margin: 0 auto;	
-} 
-
-.img{
 	display: block;
 	border-radius: 50%;
-	margin: auto;
-}
+	margin: 0 auto;
+} 
+
 
 .card{
 	display: flex;
@@ -50,12 +45,14 @@ img{
 
 .text{
 	text-align: center;
-	margin: 0 0 0 16px;
+	flex-shrink: 1;
+	width: 100%;
 
 }
 
 @media screen and (min-width: 540px) {
 	.card{
+		display: flex;
 		flex-direction: row;
 		flex-wrap: wrap;
 			
@@ -64,11 +61,17 @@ img{
 	.contejner{
 		flex: 0 1 calc((100% - 20px) / 2);
 		flex-direction: row;
+		display: flex;
+		gap: 12px;
 	}
 	
 	img{
 		width: 90px;
 	}
+	.img{
+		flex: 0 0 90px;
+	}
+
 	.text{
 		text-align: left;
 	}
